criação do menu para acessar os relatórios

--- a/Projeto Final - POO.ipynb
+++ b/Projeto Final - POO.ipynb
@@ -2,8 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Relatorio.relatorio_cliente_ordem() missing 2 required positional arguments: 'self' and 'clientes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_682201/2911203519.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 213\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_682201/2911203519.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    186\u001b[0m             \u001b[0mrelatorio_option\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrelatorio_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mrelatorio_option\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 188\u001b[0;31m                 \u001b[0mRelatorio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelatorio_cliente_ordem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    189\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    190\u001b[0m                 \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Relatorio.relatorio_cliente_ordem() missing 2 required positional arguments: 'self' and 'clientes'"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "from enum import Enum\n",
@@ -13,6 +29,7 @@
     "from e_farmacia.Laboratorio import Laboratorio\n",
     "from e_farmacia.e_medicamentos.MedicamentoQuimioterapico import MedicamentoQuimioterapico\n",
     "from e_farmacia.e_medicamentos.MedicamentoFitoterapico import MedicamentoFitoterapico\n",
+    "from e_farmacia.Relatorio import Relatorio\n",
     "import time\n",
     "\n",
     "class OptionMenu(Enum):\n",
@@ -22,7 +39,8 @@
     "    BUSCAR_CLIENTE = 4\n",
     "    BUSCAR_MEDICAMENTO = 5\n",
     "    ADD_LABORATORIO = 6\n",
-    "    CLOSE = 7\n",
+    "    RELATORIOS = 7\n",
+    "    CLOSE = 8\n",
     "    \n",
     "\n",
     "menu_str = \"\"\"\n",
@@ -34,11 +52,22 @@
     "4 - Buscar Cliente por CPF\n",
     "5 - Buscar Medicamento por Nome\n",
     "6 - Cadastrar Laboratório\n",
-    "7 - Sair\n",
+    "7 - Relatórios\n",
+    "8 - Sair\n",
     "\\n\n",
     "Digite a opção desejada: \n",
     "\"\"\"\n",
     "\n",
+    "relatorio_str =\"\"\"\n",
+    "------ Relatórios ------\n",
+    "\\n\n",
+    "1 - Clientes por Ordem Alfabética\n",
+    "2 - Medicamento por Ordem Alfabética\n",
+    "3 - Medicamentos (Quimioterápicos ou Fitoterápicos)\n",
+    "4 - Sair\n",
+    "\\n\n",
+    "Digite a opção desejada: \n",
+    "\"\"\"\n",
     "def main():\n",
     "    farmacia = Farmacia()\n",
     "    now = datetime.now()\n",
@@ -171,6 +200,14 @@
     "                print(\"Operação cancelada pelo usuário!\")\n",
     "\n",
     "\n",
+    "        elif opt == OptionMenu.RELATORIOS.value:\n",
+    "            clear_output(wait=False)\n",
+    "            relatorio_option = int(input(relatorio_str))\n",
+    "            if relatorio_option == 1 :\n",
+    "                Relatorio.relatorio_cliente_ordem()\n",
+    "            else:\n",
+    "                clear_output(wait=False)    \n",
+    "                print(f\"⚠️ Atenção ❌ O valor digitado ('{relatorio_option}') não existe no menu! Tente novamente.\")\n",
     "        \n",
     "        elif opt == OptionMenu.CLOSE.value:\n",
     "            clear_output(wait=False)\n",
@@ -193,10 +230,14 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -215,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
