refactor: functions and class

--- a/Projeto Final - POO.ipynb
+++ b/Projeto Final - POO.ipynb
@@ -2,46 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Relatorio.relatorio_cliente_ordem() missing 2 required positional arguments: 'self' and 'clientes'",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_682201/2911203519.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 213\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_682201/2911203519.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    186\u001b[0m             \u001b[0mrelatorio_option\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrelatorio_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mrelatorio_option\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 188\u001b[0;31m                 \u001b[0mRelatorio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelatorio_cliente_ordem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    189\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    190\u001b[0m                 \u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Relatorio.relatorio_cliente_ordem() missing 2 required positional arguments: 'self' and 'clientes'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 271\u001B[0m\n\u001B[1;32m    266\u001B[0m             \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m⚠️ Atenção ❌ O valor digitado (\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mopt\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m) não existe no menu! Tente novamente.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    270\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[0;32m--> 271\u001B[0m     \u001B[43mmain\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[1], line 217\u001B[0m, in \u001B[0;36mmain\u001B[0;34m()\u001B[0m\n\u001B[1;32m    215\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m    216\u001B[0m       clear_output(wait\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[0;32m--> 217\u001B[0m       relatorio_option \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mrelatorio_str\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    218\u001B[0m       \u001B[38;5;28;01mif\u001B[39;00m relatorio_option \u001B[38;5;241m==\u001B[39m OptionSubMenu\u001B[38;5;241m.\u001B[39mORDENAR_CLIENTE\u001B[38;5;241m.\u001B[39mvalue:\n\u001B[1;32m    219\u001B[0m           Relatorio\u001B[38;5;241m.\u001B[39mrelatorio_cliente_ordem(farmacia\u001B[38;5;241m.\u001B[39mclientes)\n",
+      "\u001B[0;31mValueError\u001B[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
     "from datetime import datetime\n",
-    "from enum import Enum\n",
     "from IPython.display import clear_output\n",
     "from e_farmacia.Farmacia import Farmacia\n",
     "from e_farmacia.Cliente import Cliente\n",
     "from e_farmacia.Laboratorio import Laboratorio\n",
+    "from e_farmacia.e_medicamentos.Medicamento import Medicamento\n",
+    "from e_farmacia.Venda import Venda\n",
     "from e_farmacia.e_medicamentos.MedicamentoQuimioterapico import MedicamentoQuimioterapico\n",
     "from e_farmacia.e_medicamentos.MedicamentoFitoterapico import MedicamentoFitoterapico\n",
     "from e_farmacia.Relatorio import Relatorio\n",
+    "from e_farmacia.e_enums.OptionMenu import OptionMenu\n",
+    "from e_farmacia.e_enums.OptionSubMenu import OptionSubMenu\n",
     "import time\n",
     "\n",
-    "class OptionMenu(Enum):\n",
-    "    ADD_CLIENTE = 1\n",
-    "    ADD_MEDICAMENTO = 2\n",
-    "    EFETUAR_VENDA = 3\n",
-    "    BUSCAR_CLIENTE = 4\n",
-    "    BUSCAR_MEDICAMENTO = 5\n",
-    "    ADD_LABORATORIO = 6\n",
-    "    RELATORIOS = 7\n",
-    "    CLOSE = 8\n",
-    "    \n",
     "\n",
     "menu_str = \"\"\"\n",
     "------ Sistema de Farmácia ------\n",
@@ -68,8 +58,33 @@
     "\\n\n",
     "Digite a opção desejada: \n",
     "\"\"\"\n",
+    "\n",
     "def main():\n",
     "    farmacia = Farmacia()\n",
+    "    \n",
+    "    cliente1 = Cliente(\"12345678910\", \"João\", datetime(1990, 1, 1))\n",
+    "    cliente2 = Cliente(\"98765432100\", \"Maria\", datetime(1980, 6, 15))\n",
+    "    \n",
+    "    farmacia.adicionar_cliente(cliente1)\n",
+    "    farmacia.adicionar_cliente(cliente2)\n",
+    "    \n",
+    "    lab1 = Laboratorio(\"LabA\", \"Rua LabA, 789\", \"(11) 12345-6789\", \"Recife\", \"PE\")\n",
+    "    lab2 = Laboratorio(\"LabB\", \"Rua LabB, 101\", \"(21) 98765-4321\", \"Salvador\", \"BA\")\n",
+    "    farmacia.adicionar_laboratorio(lab1)\n",
+    "    farmacia.adicionar_laboratorio(lab2)\n",
+    "    \n",
+    "    med1 = Medicamento(\"Paracetamol\", \"Acetaminophen\", lab1, \"Alivia a dor e reduz febre\", 10.00)\n",
+    "    med2 = MedicamentoFitoterapico(\"Boldo\", \"Peumus bolds\", lab2, \"Auxilia na digestão\", 7.00)\n",
+    "    med3 = MedicamentoQuimioterapico(\"Ibuprofeno\", \"Ibuprofen\", lab1, \"Alivia dores e inflamações\", 12.50, True)\n",
+    "    \n",
+    "    farmacia.adicionar_medicamento(med1)\n",
+    "    farmacia.adicionar_medicamento(med2)\n",
+    "    farmacia.adicionar_medicamento(med3)\n",
+    "    \n",
+    "    venda1 = Venda(datetime.now(), [med1, med2], cliente1, med1.preco + med2.preco)\n",
+    "    farmacia.adicionar_venda(venda1)\n",
+    "\n",
+    "\n",
     "    now = datetime.now()\n",
     "    date = now.strftime(\"%d/%m/%Y\")\n",
     "\n",
@@ -158,14 +173,31 @@
     "        \n",
     "        elif opt == OptionMenu.EFETUAR_VENDA.value:\n",
     "            clear_output(wait=False)\n",
-    "\n",
     "            cpf_cliente = input(\"Digite o CPF do cliente: \")\n",
-    "            print(\"Selecione os medicamentos para a venda (separe por vírgula):\")\n",
-    "            for index, med in enumerate(farmacia.medicamentos, start=1):\n",
-    "                print(f\"{index}. {med.nome}\")\n",
-    "            indices_medicamentos = [int(i) - 1 for i in input().split(',')]\n",
-    "            lista_medicamentos = [farmacia.medicamentos[i] for i in indices_medicamentos]\n",
-    "            farmacia.efetuar_venda(cpf_cliente, lista_medicamentos)\n",
+    "            \n",
+    "            while True:  \n",
+    "                print(\"Selecione os medicamentos para a venda (separe por vírgula):\")                \n",
+    "        \n",
+    "                try:\n",
+    "                    for index, med in enumerate(farmacia.medicamentos, start=1):\n",
+    "                         print(f\"{index}. {med.nome}\")                    \n",
+    "                 \n",
+    "                    time.sleep(2)\n",
+    "                    indices_medicamentos = [int(i) - 1 for i in input(\"número: \").split(',')]\n",
+    "                    lista_medicamentos = [farmacia.medicamentos[i] for i in indices_medicamentos]\n",
+    "                    clear_output(wait=False)\n",
+    "                    print(\"Venda concluída com sucesso!\")\n",
+    "                    farmacia.efetuar_venda(cpf_cliente, lista_medicamentos)\n",
+    "                    time.sleep(2)\n",
+    "                    break  \n",
+    "                except IndexError: \n",
+    "                    clear_output(wait=False)\n",
+    "                    print(\"Um ou mais números de medicamentos inseridos são inválidos. Tente novamente.\")\n",
+    "                    continue\n",
+    "                except ValueError:  \n",
+    "                    clear_output(wait=False)\n",
+    "                    print(\"Entrada inválida. Por favor, insira os números dos medicamentos separados por vírgula.\")\n",
+    "                    continue\n",
     "        \n",
     "        elif opt == OptionMenu.BUSCAR_CLIENTE.value:\n",
     "            clear_output(wait=False)\n",
@@ -199,26 +231,53 @@
     "            except KeyboardInterrupt:\n",
     "                print(\"Operação cancelada pelo usuário!\")\n",
     "\n",
-    "\n",
     "        elif opt == OptionMenu.RELATORIOS.value:\n",
-    "            clear_output(wait=False)\n",
-    "            relatorio_option = int(input(relatorio_str))\n",
-    "            if relatorio_option == 1 :\n",
-    "                Relatorio.relatorio_cliente_ordem()\n",
-    "            else:\n",
-    "                clear_output(wait=False)    \n",
-    "                print(f\"⚠️ Atenção ❌ O valor digitado ('{relatorio_option}') não existe no menu! Tente novamente.\")\n",
+    "          while True:\n",
+    "                clear_output(wait=False)\n",
+    "                relatorio_option = int(input(relatorio_str))\n",
+    "                if relatorio_option == OptionSubMenu.ORDENAR_CLIENTE.value:\n",
+    "                    Relatorio.relatorio_cliente_ordem(farmacia.clientes)\n",
+    "                    time.sleep(2)\n",
+    "                    \n",
+    "                elif relatorio_option == OptionSubMenu.ORDENAR_MEDICAMENTO.value:\n",
+    "                    Relatorio.relatorio_medicamento_ordem(farmacia.medicamentos)\n",
+    "                    time.sleep(2)\n",
+    "                    \n",
+    "                elif relatorio_option == OptionSubMenu.MEDICAMENTO_LISTAR.value:\n",
+    "                    Relatorio.relatorio_quimio_fito(farmacia.medicamentos)\n",
+    "                    time.sleep(2)\n",
+    "                    \n",
+    "                elif relatorio_option == OptionSubMenu.SAIR.value:\n",
+    "                    break\n",
+    "                else:\n",
+    "                    clear_output(wait=False)    \n",
+    "                    print(f\"⚠️ Atenção ❌ O valor digitado ('{relatorio_option}') não existe no menu! Tente novamente.\")\n",
     "        \n",
     "        elif opt == OptionMenu.CLOSE.value:\n",
     "            clear_output(wait=False)\n",
-    "            print(\"\\n\\n🚀 Encerrando programa aguarde .........\", end=\"\", flush=True)        \n",
+    "\n",
+    "            print(\"------------Extração de relatórios------------\\n\")            \n",
+    "            nome_medicamento, quantidade, valor_total = Relatorio.relatorio_mais_vendido(farmacia.vendas)\n",
+    "            print(f\"\\n-Medicamento mais vendido: {nome_medicamento} | Quantidade vendida: {quantidade} | Valor total: R${valor_total:.2f}\")\n",
+    "            \n",
+    "            quantidade_atend = Relatorio.relatorio_quantidade_atendimento(farmacia.vendas)            \n",
+    "            print(f\"\\n-Quantidade de pessoas atendidas: {quantidade_atend}\")\n",
+    "            \n",
+    "            med_quimi = Relatorio.relatorio_quimio_dia(farmacia.vendas)\n",
+    "            print(med_quimi)\n",
+    "            \n",
+    "            med_fito = Relatorio.relatorio_fito_dia(farmacia.vendas)\n",
+    "            print(med_fito)\n",
+    "            \n",
+    "            time.sleep(2)\n",
+    "            \n",
+    "            print(\"\\n🚀 Encerrando programa aguarde .........\", end=\"\", flush=True)        \n",
     "            for i in range(40):  \n",
     "                print('.', end='', flush=True)  \n",
     "                time.sleep(0.1)\n",
-    "                \n",
-    "            clear_output(wait=False)\n",
-    "    \n",
-    "            print('\\n\\n\\n ✌️Obrigado e até mais❗️🙂\\n\\n')\n",
+    "\n",
+    "\n",
+    "            print('\\n\\n ✌️Obrigado e até mais❗️🙂\\n\\n')\n",
     "            time.sleep(4)\n",
     "            break\n",
     "        \n",
@@ -230,14 +289,19 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
