--- a/Projeto Final - POO.ipynb
+++ b/Projeto Final - POO.ipynb
@@ -2,18 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 271\u001B[0m\n\u001B[1;32m    266\u001B[0m             \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m⚠️ Atenção ❌ O valor digitado (\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mopt\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m) não existe no menu! Tente novamente.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    270\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[0;32m--> 271\u001B[0m     \u001B[43mmain\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn[1], line 217\u001B[0m, in \u001B[0;36mmain\u001B[0;34m()\u001B[0m\n\u001B[1;32m    215\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m    216\u001B[0m       clear_output(wait\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[0;32m--> 217\u001B[0m       relatorio_option \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mrelatorio_str\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    218\u001B[0m       \u001B[38;5;28;01mif\u001B[39;00m relatorio_option \u001B[38;5;241m==\u001B[39m OptionSubMenu\u001B[38;5;241m.\u001B[39mORDENAR_CLIENTE\u001B[38;5;241m.\u001B[39mvalue:\n\u001B[1;32m    219\u001B[0m           Relatorio\u001B[38;5;241m.\u001B[39mrelatorio_cliente_ordem(farmacia\u001B[38;5;241m.\u001B[39mclientes)\n",
-      "\u001B[0;31mValueError\u001B[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------Extração de relatórios------------\n",
+      "\n",
+      "\n",
+      "-Medicamento mais vendido: Ibuprofeno | Quantidade vendida: 2 | Valor total: R$20.00\n",
+      "\n",
+      "-Quantidade de pessoas atendidas: 3\n",
+      "\n",
+      "-Total de remédios Quimioterápicos vendidos: 2\n",
+      "Valor total: R$ 25.00\n",
+      "\n",
+      "-Total de remédios Fitoterápicos vendidos: 4\n",
+      "Valor total: R$ 417.00\n",
+      "\n",
+      "🚀 Encerrando programa aguarde .................................................\n",
+      "\n",
+      " ✌️Obrigado e até mais❗️🙂\n"
      ]
     }
    ],
